TLYCS -- merging in population data, some simple plots of 'uptick by city' by ...

--- a/_main.Rmd
+++ b/_main.Rmd
@@ -1,3 +1,64 @@
+---
+title: "EA Market testing data analysis"
+author: "David Reinstein and other members of the EAMT team"
+logo: bulb.png
+bibliography: references.bib
+csl: assets/apa.csl
+link-citations: true
+always_allow_html: true
+use_littlefoot: true
+sidebar_width: "350px"
+site: bookdown::bookdown_site
+output:
+  rethinkpriorities::book:
+    toc_depth: 2
+    split_by: "chapter"
+github-repo: daaronr/eamt_data_analysis
+description: "Description and analysis of EAMT trials"
+---
+
+
+# About {.unnumbered}
+
+See ['Effective Giving & Action: Market testing & Synthesis' - public](https://effective-giving-marketing.gitbook.io/untitled/) and [private version](https://app.gitbook.com/o/-MfFk4CTSGwVOPkwnRgx/s/-Mf8cHxdwePMZXRTKnEE/)
+
+
+## Tech and collophon
+
+This is styled based on the Rethink Priorities '[Bookdown template](https://rethinkpriorities.github.io/bookdown-template)' ...  and you may wish to manually update from there
+
+Note that this is a 'bookdown site in the gitbook style'. However, we're not sure yet if and how it can be integrated with the `https://app.gitbook.com/` content.
+
+
+```{r}
+
+library(pacman)
+p_load(dplyr, knitr, here, bookdown, install = FALSE)
+p_load(readxl)
+p_load(pryr)
+p_load(stringr)
+p_load(kableExtra)
+p_load(devtools)
+p_load(googledrive)
+p_load(googlesheets4)
+devtools::install_github("paulhendricks/anonymizer")
+library(anonymizer)
+
+
+devtools::install_github("rethinkpriorities/rp-r-package")
+library(rethinkpriorities)
+
+devtools::install_github("rethinkpriorities/r-noodling-package")
+library(rnoodling)
+
+```
+
+
+
+
+
+<!--chapter:end:index.Rmd-->
+
 # TLYCS Portland trial: background, data input, brief report
 
 ## The trial
@@ -328,4 +389,108 @@ If we want a  more precise estimate and careful CIs^[confidence, credible or 'co
     
 
 
+
+
+<!--chapter:end:tlycs_portland_trial_2021/input_simple_analysis.Rmd-->
+
+# OftW pre-giving-tuesday-email upselling split test (impact vs emotion)
+
+## The trial
+
+In December 2021, OftW sent out a sequence of emails to existing OftW pledgers/participants asking them for an additional donation. There were two 'treatment variants'; an emotional email and a standard impact-based email. The treatment was constant by individual (the same person always got emails with the same theme.
+
+The details are presented in our (currently private) gitbook [HERE](https://app.gitbook.com/o/-MfFk4CTSGwVOPkwnRgx/s/-Mf8cHxdwePMZXRTKnEE/contexts-and-environments-for-testing/one-for-the-world/pre-giving-tuesday-email-split-test) and in the linked pre-registration (also on OSF).
+
+## Capturing data
+
+Kennan and Chloe captured the data and Metadata from
+
+1. The OFTW database
+2. SurveyMonkey
+
+Putting this into the (private) Google sheet linked [HERE](https://docs.google.com/spreadsheets/d/1iUKXkEqoadBgtUG_epBzUzCgA_J5mdWWstcXtpAdNJs/edit#gid=521638649)
+
+We added some metadata/explainers to that data, and downloaded it as an Excel sheet.^[Todo -- more direct input through API tools.]
+
+
+<!-- (This is gitignored so it won't be 'committed' to our repo, at least for now)
+
+Quick note here on how Kennan put the (different types of) data together in that Gsheet. We probably should use the API tool to import it directly here. -->
+
+
+
+## Input and clean data
+
+We input the sheet from the external Google sheet location (access required)...
+
+
+```{r, warning=FALSE, message=FALSE}
+
+gs4_auth(scope = "https://www.googleapis.com/auth/drive")
+drive_auth(token = gs4_token())
+
+oftw_ppl_don_21_22 <- read_sheet("https://docs.google.com/spreadsheets/d/1iUKXkEqoadBgtUG_epBzUzCgA_J5mdWWstcXtpAdNJs/edit#gid=521638649", sheet="Raw data (Mailchimp)")  %>% 
+  select(-`Treatment group`) #remove an un-useful repeated name column
+
+oftw_ppl_don_21_22 %>% names() %>% paste(collapse=", ")
+
+```
+
+
+### Labeling and cleaning 
+
+
+The code ... 
+
+...makes names `snake_case`, using original names as labels...
+
+```{r}
+
+labelled::var_label(oftw_ppl_don_21_22) <- names(oftw_ppl_don_21_22) 
+
+names(oftw_ppl_don_21_22) <- snakecase::to_snake_case(names(oftw_ppl_don_21_22)) 
+
+```
+
+<!--Todo: Remove useless columns -->
+
+...separates second row (descriptors) from tibble...
+
+```{r}
+
+oftw_ppl_don_21_22_col_descriptors <- oftw_ppl_don_21_22[1,]
+
+oftw_ppl_don_21_22 <- oftw_ppl_don_21_22[-c(1),] 
+
+```
+
+
+...and anonymizes the data...
+
+```{r}
+
+oftw_ppl_don_21_22 <- oftw_ppl_don_21_22 %>%
+  dplyr::select(-first_name, -last_name) %>%
+  mutate(email_address= salt(.seed = 42, email_address) %>% hash(.algo = "crc32"),
+         school_string= salt(.seed = 43, school_string) %>% hash(.algo = "crc32"),
+         employer= salt(.seed = 44, employer) %>% hash(.algo = "crc32")
+  )
+  
+```
+
+## Descriptives and exploratory analysis
+
+
+
+## Basic tests: Donation incidence and amounts
+
+(See preregistration -- go through preregistered tests one at a time)
+
+## Basic tests: Clicks and retention outcomes
+
+## "Equivalence testing" with randomization inference/simulation
+
+(Here we should merge in the analysis done in  [HERE](https://rethinkpriorities.github.io/methodology-statistics-design/inference-and-rough-equivalence-testing-with-binomial-outcomes.html#how-likely-are-proportions-this-similar-under-different-size-true-effect-sizes))
+
+<!--chapter:end:oftw_giving_season_upsell_2021_trial/oftw_upsell_input_first_analysis.Rmd-->
 
