fix bugs and build

--- a/assets/bib/packages.bib
+++ b/assets/bib/packages.bib
@@ -39,6 +39,30 @@
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
+@Manual{R-esquisse,
+  title = {esquisse: Explore and Visualize Your Data Interactively},
+  author = {Fanny Meyer and Victor Perrier},
+  year = {2022},
+  note = {R package version 1.1.0},
+  url = {https://CRAN.R-project.org/package=esquisse},
+}
+
+@Manual{R-ggiraph,
+  title = {ggiraph: Make ggplot2 Graphics Interactive},
+  author = {David Gohel and Panagiotis Skintzos},
+  year = {2022},
+  note = {R package version 0.8.2},
+  url = {https://davidgohel.github.io/ggiraph/},
+}
+
+@Manual{R-ggplot2,
+  title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
+  author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
+  year = {2021},
+  note = {R package version 3.3.5},
+  url = {https://CRAN.R-project.org/package=ggplot2},
+}
+
 @Manual{R-googledrive,
   title = {googledrive: An Interface to Google Drive},
   author = {Lucy {D'Agostino McGowan} and Jennifer Bryan},
@@ -87,6 +111,29 @@
   url = {https://github.com/trinker/pacman},
 }
 
+@Manual{R-plm,
+  title = {plm: Linear Models for Panel Data},
+  author = {Yves Croissant and Giovanni Millo and Kevin Tappe},
+  year = {2022},
+  note = {R package version 2.6-1},
+  url = {https://CRAN.R-project.org/package=plm},
+}
+
+@Manual{R-plotly,
+  title = {plotly: Create Interactive Web Graphics via plotly.js},
+  author = {Carson Sievert and Chris Parmer and Toby Hocking and Scott Chamberlain and Karthik Ram and Marianne Corvellec and Pedro Despouy},
+  year = {2021},
+  note = {R package version 4.10.0},
+  url = {https://CRAN.R-project.org/package=plotly},
+}
+
+@Manual{R-pmdplyr,
+  title = {pmdplyr: dplyr Extension for Common Panel Data Maneuvers},
+  author = {Nick Huntington-Klein and Philip Khor},
+  year = {2022},
+  note = {https://nickch-k.github.io/pmdplyr},
+}
+
 @Manual{R-pryr,
   title = {pryr: Tools for Computing on the Language},
   author = {Hadley Wickham},
@@ -125,6 +172,14 @@
   note = {R package version 0.1},
 }
 
+@Manual{R-shiny,
+  title = {shiny: Web Application Framework for R},
+  author = {Winston Chang and Joe Cheng and JJ Allaire and Carson Sievert and Barret Schloerke and Yihui Xie and Jeff Allen and Jonathan McPherson and Alan Dipert and Barbara Borges},
+  year = {2021},
+  note = {R package version 1.7.1},
+  url = {https://shiny.rstudio.com/},
+}
+
 @Manual{R-stringr,
   title = {stringr: Simple, Consistent Wrappers for Common String Operations},
   author = {Hadley Wickham},
@@ -149,6 +204,15 @@
   year = {2016},
   note = {ISBN 978-1138700109},
   url = {https://bookdown.org/yihui/bookdown},
+}
+
+@Book{ggplot22016,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2016},
+  isbn = {978-3-319-24277-4},
+  url = {https://ggplot2.tidyverse.org},
 }
 
 @Book{knitr2015,
@@ -180,6 +244,44 @@
   note = {version 0.5.0},
   year = {2018},
   url = {http://github.com/trinker/pacman},
+}
+
+@Book{plm2018,
+  title = {Panel Data Econometrics with {R}},
+  author = {Yves Croissant and Giovanni Millo},
+  publisher = {Wiley},
+  year = {2018},
+}
+
+@Article{plm2008,
+  title = {Panel Data Econometrics in {R}: The {plm} Package},
+  author = {Yves Croissant and Giovanni Millo},
+  journal = {Journal of Statistical Software},
+  year = {2008},
+  volume = {27},
+  number = {2},
+  pages = {1--43},
+  doi = {10.18637/jss.v027.i02},
+}
+
+@Article{plm2017,
+  title = {Robust Standard Error Estimators for Panel Models: A Unifying Approach},
+  author = {Giovanni Millo},
+  journal = {Journal of Statistical Software},
+  year = {2017},
+  volume = {82},
+  number = {3},
+  pages = {1--27},
+  doi = {10.18637/jss.v082.i03},
+}
+
+@Book{plotly2020,
+  author = {Carson Sievert},
+  title = {Interactive Web-Based Data Visualization with R, plotly, and shiny},
+  publisher = {Chapman and Hall/CRC},
+  year = {2020},
+  isbn = {9781138331457},
+  url = {https://plotly-r.com},
 }
 
 @Book{rmarkdown2018,
