--- a/index.qmd
+++ b/index.qmd
@@ -3,15 +3,15 @@
 The “EA Market Testing Team” represents a small group of researchers and practitioners interested in promoting effective altruism and effective charitable giving and learning more about what motivates this.
 
 
-See ['Effective Giving & Action: Market testing & Synthesis' - public](https://effective-giving-marketing.gitbook.io/untitled/) and [private version](https://app.gitbook.com/o/-MfFk4CTSGwVOPkwnRgx/s/-Mf8cHxdwePMZXRTKnEE/), and our [FAQ here](https://docs.google.com/document/d/1Ok9b51p5aQ1qHFnrGkf_e7vsjnDWzWdU_Zv3eUCtEL4/edit#).
+See 'Gitbooks': ['Effective Giving & Action: Market testing & Synthesis' - public](https://effective-giving-marketing.gitbook.io/untitled/) and [private version](https://app.gitbook.com/o/-MfFk4CTSGwVOPkwnRgx/s/-Mf8cHxdwePMZXRTKnEE/), and our [FAQ here](https://docs.google.com/document/d/1Ok9b51p5aQ1qHFnrGkf_e7vsjnDWzWdU_Zv3eUCtEL4/edit#).
 
-<!-- 
+<!--
 logo: bulb.png
 description: "Description and analysis of EAMT trials"
 -->
 
 
-The present 'web book' aims to present all of the trials and experiments that we are able to share. We will try to present the setup, results, and analysis as concisely and transparently as possible. This dynamic document combines data, code, visualization, tests, and limited narrative. It is a complement to the 'Gitbook' linked above, and each refer to each other.
+The present (Quarto) 'web book' will present all of the trials and experiments that we are able to share. We try to present the setup, results, and analysis as concisely and transparently as possible. This dynamic document combines data, code, visualization, tests, and limited narrative. It is a complement to the 'Gitbook' linked above, and each refer to each other.
 
 ## Trials reported elsewhere
 
@@ -24,14 +24,30 @@ Some trials are currently only reported in the [gitbook](https://effective-givin
 3. Trials with The Life You Can Save
 
 
+
+## Future work to do, tools to incorporate
+
+More self-service/interaction ^[May want to build  [Flexdashboards](https://pkgs.rstudio.com/flexdashboard/), 
+[Htmlwidgets](http://www.htmlwidgets.org) are easy and useful; see also Shiny packages.
+`DT::datatable` where possible, style as appropriate] 
+
+
+```{r}
+library(pacman)
+p_load(leaflet)
+library(leaflet)
+leaflet() |>
+  setView(174.764, -36.877, zoom = 16) |> 
+  addTiles() |>
+  addMarkers(174.764, -36.877, popup = "Maungawhau") 
+```
+
 ## Tech and collophon
 
 This is styled with Quarto. See my template repo  [here](https://github.com/daaronr/dr_quarto_template), hosted [here](https://daaronr.github.io/dr_quarto_template/),
 
 ^[However, we're not sure yet if and how it can be integrated with the `https://app.gitbook.com/` content.]
 ^[Note: as this is Quarto and not Rmd, packages need to be loaded in every chapter. I'll put these in `code/shared_packages_code.R`.]
-
-
 
 
 
